--- a/index.html
+++ b/index.html
@@ -381,6 +381,61 @@
             margin-bottom: 10px;
             color: var(--primary);
         }
+        /* RESIZE CONTROLS - Add this to your CSS */
+.resize-controls {
+    background: var(--light);
+    padding: 15px;
+    border-radius: 10px;
+    margin: 15px 0;
+}
+
+.resize-options {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.resize-option {
+    padding: 12px 8px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background: white;
+    cursor: pointer;
+    transition: all 0.3s;
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+.resize-option:hover {
+    border-color: var(--primary);
+    background: rgba(29, 161, 242, 0.05);
+}
+
+.resize-option.active {
+    border-color: var(--primary);
+    background: rgba(29, 161, 242, 0.1);
+    font-weight: 600;
+}
+
+.card.resizable {
+    transition: all 0.3s ease;
+}
+
+.card.size-small {
+    max-width: 400px;
+    transform: scale(0.9);
+}
+
+.card.size-medium {
+    max-width: 500px;
+    transform: scale(1);
+}
+
+.card.size-large {
+    max-width: 600px;
+    transform: scale(1.1);
+}
         
         footer {
             text-align: center;
