--- a/index.html
+++ b/index.html
@@ -895,6 +895,24 @@
                         </div>
                     </div>
                 </div>
+                <!-- RESIZE CONTROLS - Add this after Design Presets -->
+<div class="resize-controls">
+    <label>Card Size</label>
+    <div class="resize-options">
+        <div class="resize-option active" data-size="medium">
+            <i class="fas fa-mobile-alt"></i>
+            <div>Medium</div>
+        </div>
+        <div class="resize-option" data-size="small">
+            <i class="fas fa-mobile"></i>
+            <div>Small</div>
+        </div>
+        <div class="resize-option" data-size="large">
+            <i class="fas fa-desktop"></i>
+            <div>Large</div>
+        </div>
+    </div>
+</div>
                 
                 <div class="form-group">
                     <label>Accent Color</label>
