--- a/index.html
+++ b/index.html
@@ -1159,6 +1159,16 @@
             });
         });
         
+        // Resize selection
+const resizeOptions = document.querySelectorAll('.resize-option');
+resizeOptions.forEach(option => {
+    option.addEventListener('click', () => {
+        resizeOptions.forEach(opt => opt.classList.remove('active'));
+        option.classList.add('active');
+        currentSize = option.getAttribute('data-size');
+        updateCardSize();
+    });
+});
         // Style selection
         styleOptions.forEach(option => {
             option.addEventListener('click', () => {
